# prettyspecialmethods

./: README.rst  noxfile.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
sphinxcontrib/: prettyspecialmethods.py
tests/: conftest.py  test_implemented.py  test_plaintext.py
tests/test-simple/: conf.py
