[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "RUF"]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.8"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "skip"
incremental = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
    "sphinx"
]
