[metadata]
name = sphinxcontrib-prettyspecialmethods
summary = Shows special methods as the python syntax that invokes them
description-file =
    README.rst
author = Thomas Smith
maintainer = Eric Wieser
home-page = https://github.com/sphinx-contrib/prettyspecialmethods
project_urls =
    Bug Tracker = https://github.com/sphinx-contrib/prettyspecialmethods/issues
    Source Code = https://github.com/sphinx-contrib/prettyspecialmethods
python-requires = >=3.8
license = MIT

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[mypy]
python_version = 3.8
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
max-line-length = 100

[tool:pytest]
markers =
    sphinx
