[metadata]
name = sphinxcontrib-prettyspecialmethods
version = attr: sphinxcontrib.prettyspecialmethods.__version__
description = Shows special methods as the python syntax that invokes them
long_description = file: README.rst
author = Thomas Smith
maintainer = Kaleb Barrett
url = https://github.com/ktbarrett/prettyspecialmethods
project_urls =
    Bug Tracker = https://github.com/ktbarrett/prettyspecialmethods/issues
    Source Code = https://github.com/ktbarrett/prettyspecialmethods
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[options]
python_requires = >=3.8
install_requires =
    sphinx
namespace_packages =
    sphinxcontrib
